; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lempar.c_ParseFree.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lempar.c_ParseFree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ParseFree(i8* %0, void (i8*)* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca void (i8*)*, align 8
  store i8* %0, i8** %3, align 8
  store void (i8*)* %1, void (i8*)** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %13

8:                                                ; preds = %2
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @ParseFinalize(i8* %9)
  %11 = load void (i8*)*, void (i8*)** %4, align 8
  %12 = load i8*, i8** %3, align 8
  call void %11(i8* %12)
  br label %13

13:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @ParseFinalize(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
